Enhance barcode processing and UI features
- Added support for flex_color_scheme and gs1_barcode_parser dependencies.
- Refactored barcode processing logic to handle GS1 Digital Links and additional data extraction.
- Updated BarcodeVerifierScreen to include a new test route and improved UI elements for displaying barcode results.
- Introduced BarcodeService for better separation of concerns in barcode processing.
- Enhanced user experience with animations and clearer result presentation.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
   go_router: ^15.1.1
+  flex_color_scheme: ^8.2.0
+  gs1_barcode_parser: ^1.1.1
 
 dev_dependencies:
   flutter_test:
