Update dependencies and enhance barcode functionality
- Added new dependencies: http, shimmer, cached_network_image, and others to pubspec.yaml.
- Updated pubspec.lock with new package versions for improved functionality.
- Enhanced BarcodeTestScreen and BarcodeVerifierScreen with improved UI elements and navigation for product details.
- Removed unused GS1Product and ScannerService classes to streamline the codebase.
- Updated Android and iOS project configurations for better compatibility with new dependencies.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   go_router: ^15.1.1
   flex_color_scheme: ^8.2.0
   gs1_barcode_parser: ^1.1.1
+  http: ^1.4.0
+  shimmer: ^3.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
